# mutable_rank_select

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: mutable_bitmap.hpp  mutable_bitmap_64.hpp  mutable_bitvector.hpp  mutable_bitvector_64.hpp  types.hpp  util.hpp
include/avx2/: node128.hpp  node32.hpp  node64.hpp  search_common.hpp  segment_tree.hpp  segment_tree_macros.hpp  tables.hpp
include/avx512/: node128.hpp  node256.hpp  node512.hpp  segment_tree.hpp  segment_tree_macros.hpp  tables.hpp
include/hft/: README.md  common.hpp  darray.hpp  fenwick.hpp
include/hft/fenwick/: bitf.hpp  bitl.hpp  bytef.hpp  bytel.hpp  typef.hpp  typel.hpp
include/mranisz/: README.md
include/mranisz/shared/: rank.hpp  select.hpp
include/nodes/: common.hpp  tables.hpp
include/nodes/avx2/: node128.hpp  node32.hpp  node64.hpp  search_common.hpp
include/poppy/: README.md  bitmap.h  popcount.h  shared.h
include/rank_select_algorithms/: common.hpp  rank.hpp  select.hpp
include/rs256/: algorithms.hpp
include/segment_tree/avx2/: node128.hpp  node32.hpp  node64.hpp  search_common.hpp  segment_tree.hpp  segment_tree_macros.hpp  tables.hpp
include/segment_tree/avx512/: node128.hpp  node256.hpp  node512.hpp  print_table.py  segment_tree.hpp  tables.hpp
src/: CMakeLists.txt  collect_results.sh  collect_results_mutable_bitmap.py  perf_compressed_bitmap.cpp  perf_hft.cpp  perf_immutable_bitmap.cpp  perf_immutable_bitvector.cpp  perf_mutable_bitmap.cpp  perf_mutable_bitmap_64.cpp  perf_mutable_bitvector.cpp  perf_mutable_bitvector_64.cpp  perf_popcnt.cpp  perf_popcnt256.cpp  perf_popcnt512.cpp  perf_popcnt_256.cpp  perf_popcnt_512.cpp  perf_popcnt_for_avx_select256.cpp  perf_popcnt_for_avx_select512.cpp  perf_prefix_sum.cpp  perf_prefix_sum256.cpp  perf_prefix_sum512.cpp  perf_prefix_sum_256.cpp  perf_prefix_sum_512.cpp  perf_rank256.cpp  perf_rank512.cpp  perf_rank64.cpp  perf_search256.cpp  perf_search512.cpp  perf_select256.cpp  perf_select512.cpp  perf_select64.cpp
test/: test_common.hpp  test_mutable_bitmap.cpp  test_mutable_bitmap.hpp  test_mutable_bitvector.cpp  test_mutable_bitvector.hpp  test_node.hpp  test_nodes.cpp  test_rank256.cpp  test_rank512.cpp  test_rank_select_algorithms.hpp  test_rs256.hpp  test_segment_tree.cpp  test_select256.cpp  test_select512.cpp  test_tree.hpp
