add_executable(perf_prefix_sum perf_prefix_sum.cpp)
add_executable(perf_rank64 perf_rank64.cpp)
add_executable(perf_rank256 perf_rank256.cpp)
add_executable(perf_select64 perf_select64.cpp)
add_executable(perf_select256 perf_select256.cpp)
add_executable(perf_mutable_bitvector perf_mutable_bitvector.cpp)
add_executable(perf_mutable_bitvector_64 perf_mutable_bitvector_64.cpp)
add_executable(perf_hft perf_hft.cpp)
add_executable(perf_immutable_bitvector perf_immutable_bitvector.cpp)
target_link_libraries(perf_immutable_bitvector sdsl succinct ${Boost_LIBRARIES})

add_executable(perf_popcnt_256 perf_popcnt_256.cpp)
add_executable(perf_prefix_sum_256 perf_prefix_sum_256.cpp)
