add_executable(perf_prefix_sum perf_prefix_sum.cpp)
add_executable(perf_rank64 perf_rank64.cpp)
add_executable(perf_rank256 perf_rank256.cpp)
add_executable(perf_rank512 perf_rank512.cpp)
add_executable(perf_select64 perf_select64.cpp)
add_executable(perf_select256 perf_select256.cpp)
add_executable(perf_select512 perf_select512.cpp)
add_executable(perf_mutable_bitmap perf_mutable_bitmap.cpp)
add_executable(perf_hft perf_hft.cpp)
add_executable(perf_immutable_bitmap perf_immutable_bitmap.cpp)
target_link_libraries(perf_immutable_bitmap sdsl succinct ${Boost_LIBRARIES})

add_executable(perf_popcnt256 perf_popcnt256.cpp)
add_executable(perf_popcnt512 perf_popcnt512.cpp)
add_executable(perf_prefix_sum256 perf_prefix_sum256.cpp)
add_executable(perf_prefix_sum512 perf_prefix_sum512.cpp)

add_executable(perf_search256 perf_search256.cpp)
add_executable(perf_search512 perf_search512.cpp)
